After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761271 - gleffects: fix gleffects fisheye shader compile error
gleffects: fix gleffects fisheye shader compile error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.6.0
Other Linux
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-01-29 02:35 UTC by Haihua Hu
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gleffects: fix gleffects fisheye shader compile error (984 bytes, patch)
2016-01-29 02:35 UTC, Haihua Hu
committed Details | Review

Description Haihua Hu 2016-01-29 02:35:42 UTC
Created attachment 319994 [details] [review]
gleffects: fix gleffects fisheye shader compile error

Shader function "sqrt" is not supported on some embedded platform, having "sqrt(2)" in the shader does not actually gain anybody anything. Use float number 1.41421.
Comment 1 Matthew Waters (ystreet00) 2016-01-29 03:36:12 UTC
commit f3653a5e9cb0712d69607a0bdd598e43a72cc03c
Author: Haihua Hu <b55597@freescale.com>
Date:   Tue Dec 8 14:09:58 2015 +0800

    gleffects: fix gleffects fisheye shader compile error
    
    On some embedded systems, sqrt() is not supported in the shader,
    use the actual value of sqrt(2) instead.
    
    Signed-off-by: Haihua Hu <b55597@freescale.com>
    Bugzilla: https://bugzilla.gnome.org/show_bug.cgi?id=761271

and 1.6 a23e3b9c9e160a0bbf01bf45eb74d814ff3538e4